crates/plotnik-tests/tests/03-analyze/self_recursion/no_escape_in_capture.txt
E = (call (E) @inner)
------------------ DIAGNOSTICS -------------------
error: infinite recursion: no escape path
 --> query.ptk:1:12
  |
1 | E = (call (E) @inner)
  |            ^
  |            |
  |            E references itself
  |
help: add a non-recursive alternative to terminate: `[Base: ... Rec: (Self)]`
-------------------- SYMBOLS ---------------------
E
  E (cycle)
